[tool.poetry]
name = "vectorfieldplot"
version = "1.3.1"
description = "A python module for creating high-quality images of electric field lines."
authors = ["CD Clark III <clifton.clark@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
